css/style.css
#main{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
}
#main > div{
    margin: 0 10px;
}
#main > div:nth-child(2),
#main > div:nth-child(3),
#main > div:nth-child(4){
    text-transform: capitalize;
}
#main > div > div{
    display: flex;
    flex-direction: column;
}
p[id^="fichier"]{
    display: none;
}

